--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.2'
 
+    compile 'com.android.volley:volley:1.0.0'
 
     testCompile 'junit:junit:4.12'
 }
