refatoracao geral para substituir butter knife por data binding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
     buildTypes.each {
         it.buildConfigField 'String', 'MOVIE_DB_API_KEY', MovieDbApiKey
     }
+    dataBinding{
+        enabled true
+    }
 }
 
 dependencies {
