--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
             </intent-filter>
 
         </activity>
+        
+        <provider
+            android:authorities="@string/content_authority"
+            android:name=".database.MoviesContentProvider"
+            android:exported="false"
+            android:syncable="true"/>
 
     </application>
 
