--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,8 @@ dependencies {
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 
 
+    //remove
+    compile 'com.clough.android.androiddbviewer:androiddbviewer:1.0.0'
+
+
 }
