--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="udacity.nanodegree.android.p2">
+    package="udacity.nanodegree.android.p2">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -16,15 +16,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-
         </activity>
-        
+
         <provider
-            android:authorities="@string/content_authority"
             android:name=".database.MoviesContentProvider"
+            android:authorities="@string/content_authority"
             android:exported="false"
             android:syncable="true"/>
 
+        <activity
+            android:name=".DetailActivity"
+            android:label="@string/title_activity_detail"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
