--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,14 +53,15 @@ dependencies {
     androidTestCompile('com.android.support.test:rules:0.5', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    // Set this dependency to build and run UI Automator tests
-    compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:support-annotations:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.1'
 
     compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
